review/add tooltips, stretched links, etc.

--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -27,12 +27,12 @@ block wrapper
       .heading__col.heading__col_cart-price.h6.mb-2 Цена
       .heading__col.heading__col_cart-quantity.h6.mb-2 Количество
       .heading__col.heading__col_cart-summ.h6.mb-2 Сумма
-    form.table-row.table-row_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
+    form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
         a.d-block(href="#")
           +img('content/cards/card-1.jpg')
       .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+        a.table-row__title.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
       .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-1 Цена:
         span.d-flex.h3
@@ -41,7 +41,7 @@ block wrapper
       .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
         .d-flex.align-items-center
           +icon('close-noborder', 'h4 color-theme-disabled mr-3')
-          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
+          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white.zi-2
             input.recalculate__field.d-none(type="number" name="count" value="1")
             button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
             .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
@@ -52,14 +52,14 @@ block wrapper
           span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
           | ₽
       .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-        button.h2.button-unstyled.color-theme-brand(type="button")
+        button.h2.button-unstyled.color-theme-brand.zi-2(type="button")
           +icon('close')
-    form.table-row.table-row_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
+    form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-md-2.mb-3.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
         a.d-block(href="#")
           +img('content/cards/card-1.jpg')
       .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+        a.table-row__title.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
       .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-1 Цена:
         span.d-flex.h3
@@ -68,7 +68,7 @@ block wrapper
       .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
         .d-flex.align-items-center
           +icon('close-noborder', 'h4 color-theme-disabled mr-3')
-          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
+          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white.zi-2
             input.recalculate__field.d-none(type="number" name="count" value="1")
             button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
             .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
@@ -79,14 +79,14 @@ block wrapper
           span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
           | ₽
       .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-        button.h2.button-unstyled.color-theme-brand(type="button")
+        button.h2.button-unstyled.color-theme-brand.zi-2(type="button")
           +icon('close')
-    form.table-row.table-row_cart.box-shadow.border-radius.py-3.py-md-1.px-3.mb-4.js-cart(action="#")
+    form.table-row.table-row_cart.box-shadow.border-radius.pos-rel.py-3.py-md-1.px-3.mb-4.js-cart(action="#")
       .table-row__col.table-row__col_cart-img.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
         a.d-block(href="#")
           +img('content/cards/card-1.jpg')
       .table-row__col.table-row__col_cart-title.d-md-flex.flex-column.align-items-start.justify-content-center.mb-3.mb-md-0
-        a.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
+        a.table-row__title.h5(href="#") Летние шины Cordiant Comfort 2 175/70 R13 86H
       .table-row__col.table-row__col_cart-price.d-flex.flex-md-column.align-items-center.align-items-md-start.justify-content-between.justify-content-md-center.pr-3.pr-md-0.mb-2.mb-md-0
         .d-block.d-md-none.mr-1 Цена:
         span.d-flex.h3
@@ -95,7 +95,7 @@ block wrapper
       .table-row__col.table-row__col_cart-quantity.d-md-flex.flex-column.align-items-start.justify-content-center.mb-2.mb-md-0
         .d-flex.align-items-center
           +icon('close-noborder', 'h4 color-theme-disabled mr-3')
-          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white
+          .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white.zi-2
             input.recalculate__field.d-none(type="number" name="count" value="1")
             button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
             .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
@@ -106,7 +106,7 @@ block wrapper
           span.font-weight-bold.mr-1.text-nowrap.js-summ 7 337.12
           | ₽
       .table-row__col.table-row__col_cart-close.d-md-flex.flex-column.align-items-center.justify-content-center
-        button.h2.button-unstyled.color-theme-brand(type="button")
+        button.h2.button-unstyled.color-theme-brand.zi-2(type="button")
           +icon('close')
     form.form.row.mb-5(action="#")
       .col-xl-8.col-md-6.d-flex.flex-wrap.align-items-start.px-0
