--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -23,3 +23,9 @@ $color__disabled: #A1A1A1;
 $color__success: #61BD2B;
 $color__warning: #F3CA2C;
 $color__danger: #EB5757;
+
+// bootstrap
+$grid-gutter-width: 8px;
+$tooltip-bg: $color__light;
+$tooltip-color: $color__brand;
+$tooltip-opacity: 1;
