--- a/src/pug/position.pug
+++ b/src/pug/position.pug
@@ -244,10 +244,19 @@ block wrapper
     .border-bottom.mb-4
       .wrapper
         .h2.font-weight-bold.mb-4 Другие бренды:
-        - var logoWheels = ['content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg']
-        each logoWheels__item in logoWheels
-          a.d-inline-block.mr-2.mr-sm-3.mb-4(href="#")
-            +img(logoWheels__item)
+        .d-flex.flex-wrap
+          a.flex-grow-1.text-center.px-2.mb-4(href="#")
+            +img('content/logo/cordiant.jpg')
+          a.flex-grow-1.text-center.px-2.mb-4(href="#")
+            +img('content/logo/bridgestone.jpg')
+          a.flex-grow-1.text-center.px-2.mb-4(href="#")
+            +img('content/logo/michelin.jpg')
+          a.flex-grow-1.text-center.px-2.mb-4(href="#")
+            +img('content/logo/pirelli.jpg')
+          a.flex-grow-1.text-center.px-2.mb-4(href="#")
+            +img('content/logo/yokohama.jpg')
+          a.flex-grow-1.text-center.px-2.mb-4(href="#")
+            +img('content/logo/goodyear.jpg')
     .wrapper
       - var namesList = ['Cordiant','Hankook','Continental','Yokohama','Good Year','Bridgestone','Nokian tyres','Dunlop','BFGoodrich','Michelin','Kormoran','Pirelli']
       each namesList__item in namesList
