--- a/src/pug/subcategory-tires-tile.pug
+++ b/src/pug/subcategory-tires-tile.pug
@@ -76,12 +76,28 @@ block wrapper
                         | ₽/шт.
 
     .box-shadow.pt-4.pb-3.mb-5
+      .border-bottom.mb-4
+        .wrapper
+          .h2.font-weight-bold.mb-4 Другие бренды:
+          .d-flex.flex-wrap
+            a.flex-grow-1.text-center.px-2.mb-4(href="#")
+              +img('content/logo/cordiant.jpg')
+            a.flex-grow-1.text-center.px-2.mb-4(href="#")
+              +img('content/logo/bridgestone.jpg')
+            a.flex-grow-1.text-center.px-2.mb-4(href="#")
+              +img('content/logo/michelin.jpg')
+            a.flex-grow-1.text-center.px-2.mb-4(href="#")
+              +img('content/logo/pirelli.jpg')
+            a.flex-grow-1.text-center.px-2.mb-4(href="#")
+              +img('content/logo/yokohama.jpg')
+            a.flex-grow-1.text-center.px-2.mb-4(href="#")
+              +img('content/logo/goodyear.jpg')
       .wrapper
-        .h2.font-weight-bold.mb-4 Другие бренды:
-        - var logoWheels = ['content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-1.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg','content/logo/logo-4.jpg','content/logo/logo-5.jpg','content/logo/logo-2.jpg','content/logo/logo-3.jpg']
-        each logoWheels__item in logoWheels
-          a.d-inline-block.mr-2.mr-sm-3.mb-4(href="#")
-            +img(logoWheels__item)
+        - var namesList = ['Cordiant','Hankook','Continental','Yokohama','Good Year','Bridgestone','Nokian tyres','Dunlop','BFGoodrich','Michelin','Kormoran','Pirelli']
+        each namesList__item in namesList
+          a.h4.d-inline-block.mr-3.mr-sm-4.mb-3(href="#")!= namesList__item
+        each namesList__item in namesList
+          a.h4.d-inline-block.mr-3.mr-sm-4.mb-3(href="#")!= namesList__item
 
     .wrapper
       include category/popular.pug
